@@ -39,6 +39,17 @@ endif::[]
 * When JAX-RS-annotated method delegates to another JAX-RS-annotated method, transaction name should include method A - {pull}1062[#1062]
 * Fixed bug that prevented an APM Error from being created when calling `org.slf4j.Logger#error` - {pull}1049[#1049]
 
+[float]
+===== Potentially breaking changes
+* Renamed some configuration options related to the experimental profiler-inferred spans feature:
+** `profiling_spans_enabled` -> `profiling_inferred_spans_enabled`
+** `profiling_sampling_interval` -> `profiling_inferred_spans_sampling_interval`
+** `profiling_spans_min_duration` -> `profiling_inferred_spans_min_duration`
+** `profiling_included_classes` -> `profiling_inferred_spans_included_classes`
+** `profiling_excluded_classes` -> `profiling_inferred_spans_excluded_classes`
+** Removed `profiling_interval` and `profiling_duration` (both are fixed to 5s now)
+
+
 [[release-notes-1.x]]
 === Java Agent version 1.x
 
